clean up and loading.ipynb

--- a/Explorations/Investigating/Cleaning/Handling_Missing_Data_Basic.ipynb
+++ b/Explorations/Investigating/Cleaning/Handling_Missing_Data_Basic.ipynb
@@ -96,6 +96,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # loading from csv and replacing na values\n",
+    "# df = pd.read_csv(\"../Datasets/stock_data.csv\",  na_values={\n",
+    "#         'eps': ['not available'],\n",
+    "#         'revenue': [-1],\n",
+    "#         'people': ['not available','n.a.']\n",
+    "#     })\n",
+    "# df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
