--- a/Explorations/Investigating/Transformation/group_by.ipynb
+++ b/Explorations/Investigating/Transformation/group_by.ipynb
@@ -1,17 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## <font color=\"maroon\"><h4 align=\"center\">Pandas Group By</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**In this tutorial we are going to look at weather data from various cities and see how group by can be used to run some analytics.** "
+    "df = pd.DataFrame({'category': ['A', 'B', 'A'], 'value': [10, 20, 30]})\n",
+    "df\n",
+    "grouped_df = df.groupby('category').sum()\n",
+    "grouped_df"
    ]
   },
   {
