--- a/Explorations/Investigating/Transformation/pandas_notes.ipynb
+++ b/Explorations/Investigating/Transformation/pandas_notes.ipynb
@@ -6,71 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Multi-level indexing allows you to store data on multiple\n",
-    "# dimensions\n",
-    "days = ['Day 1', 'Day 1', 'Day 1', 'Day 2', 'Day 2', 'Day 2']\n",
-    "meals = [1,2,3,1,2,3]\n",
-    "# zip pairs the days and meals arrays \n",
-    "# Then we create a list of those paired tuples\n",
-    "hier_index = list(zip(days, meals))\n",
-    "print(hier_index)\n",
-    "# Converts list of tuples into each row and column\n",
-    "hier_index = pd.MultiIndex.from_tuples(hier_index)\n",
-    "# Generate random array representing calories eaten per meal\n",
-    "arr_5 = np.random.randint(500, 700, size=(6, 2))\n",
-    "df_9 = pd.DataFrame(arr_5, hier_index, ['M', 'F'])\n",
-    "print(df_9)\n",
-    "\n",
-    "# Grab the day 1 DF\n",
-    "df_9.loc['Day 1']\n",
-    "\n",
-    "# Grab 1st row as a series\n",
-    "df_9.loc['Day 1'].loc[1]\n",
-    "\n",
-    "# Grab calories eaten by the female on day 2 for the 2nd meal\n",
-    "df_9.loc['Day 2'].loc[2]['F']\n",
-    "\n",
-    "# We can assign names to the Day and Meals Column\n",
-    "df_9.index.names = ['Day', 'Meal']\n",
-    "df_9\n",
-    "\n",
-    "# Get a cross section\n",
-    "# This gets me the Day 2 DF\n",
-    "df_9.xs('Day 2')\n",
-    "\n",
-    "# Get calories for the 1st meal for both days by saying what\n",
-    "# meal index you want and the Meal column name\n",
-    "df_9.xs(1, level='Meal')\n",
-    "\n",
-    "# Create a MultiIndex out of a DF using a pivot table\n",
-    "dict_6 = {'A':['Day 1', 'Day 1', 'Day 1', 'Day 2', 'Day 2', 'Day 2'],\n",
-    "         'B': [1,2,3,1,2,3],\n",
-    "         'C': ['M', 'F', 'M', 'F', 'M', 'F'],\n",
-    "         'D': [1,2,3,4,5,6]}\n",
-    "df_14 = pd.DataFrame(dict_6)\n",
-    "# Designate the D column is the data\n",
-    "# Make A & B a multilevel index\n",
-    "# Define column names come from column C\n",
-    "# You will have NaNs where data was missing\n",
-    "df_14.pivot_table(values='D', index=['A','B'], columns=['C'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sort by value for column D (Use the same function for series)\n",
-    "df_8.sort_values(by='D')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# You can concatenate DFs in the order DFs are provided\n",
     "df_12 = pd.DataFrame({'A': [1,2,3],\n",
     "                     'B': [4,5,6]},\n",
@@ -108,33 +43,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# na values?\n",
-    "df = pd.read_csv(\"stock_data.csv\",  na_values={\n",
-    "        'eps': ['not available'],\n",
-    "        'revenue': [-1],\n",
-    "        'people': ['not available','n.a.']\n",
-    "    })\n",
-    "df"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Saving specific:\n",
-    "df.to_csv(\"new.csv\", columns=[\"tickers\",\"price\"], index=False)\n",
-    "\n",
-    "# view a sheet\n",
-    "df = pd.read_excel(\"stock_data.xlsx\",\"Sheet1\")\n",
-    "\n",
-    "# Save multiple DFs\n",
-    "with pd.ExcelWriter('stocks_weather.xlsx') as writer:\n",
-    "    df_stocks.to_excel(writer, sheet_name=\"stocks\")\n",
-    "    df_weather.to_excel(writer, sheet_name=\"weather\")\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -213,8 +129,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
