--- a/Explorations/Investigating/Transformation/creation.ipynb
+++ b/Explorations/Investigating/Transformation/creation.ipynb
@@ -1,10 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# <font color=\"purple\"><h3 align=\"center\">Pandas Merge Tutorial</h3></font>"
+    "# Concat\n",
+    "concat_df = pd.concat([df1, df2])\n",
+    "concat_df\n",
+    "\n",
+    "# Join\n",
+    "df1.set_index('key', inplace=True)\n",
+    "df2.set_index('key', inplace=True)\n",
+    "joined_df = df1.join(df2, lsuffix='_left', rsuffix='_right')\n",
+    "joined_df"
    ]
   },
   {
@@ -12,6 +22,20 @@
    "metadata": {},
    "source": [
     "## <font color='blue'>Basic Merge Using a Dataframe Column</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge\n",
+    "df1 = pd.DataFrame({'key': ['A', 'B'], 'value': [1, 2]})\n",
+    "df1\n",
+    "df2 = pd.DataFrame({'key': ['A', 'B'], 'value': [3, 4]})\n",
+    "merged_df = pd.merge(df1, df2, on='key')\n",
+    "merged_df"
    ]
   },
   {
