--- a/Explorations/Investigating/Transformation/stack.ipynb
+++ b/Explorations/Investigating/Transformation/stack.ipynb
@@ -283,6 +283,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df = pd.DataFrame({'A': [1, 2], 'B': [3, 4]}, index=['first', 'second'])\n",
+    "df\n",
+    "stacked_df = df.stack()\n",
+    "stacked_df\n",
+    "\n",
+    "unstacked_df = stacked_df.unstack()\n",
+    "unstacked_df\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 90,
    "metadata": {
     "collapsed": false
@@ -1625,6 +1642,101 @@
    ],
    "source": [
     "df2.stack(level=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def demonstrate_stack():\n",
+    "    # Sample DataFrame\n",
+    "    data = {\n",
+    "        'A': [1, 2, 3],\n",
+    "        'B': [4, 5, 6],\n",
+    "        'C': [7, 8, 9]\n",
+    "    }\n",
+    "    df = pd.DataFrame(data)\n",
+    "    print(\"Original DataFrame:\")\n",
+    "    print(df)\n",
+    "    \n",
+    "    # Using stack\n",
+    "    stacked_df = df.stack()\n",
+    "    print(\"\\nStacked DataFrame:\")\n",
+    "    print(stacked_df)\n",
+    "\n",
+    "def demonstrate_stack_multiindex():\n",
+    "    # Creating a MultiIndex DataFrame\n",
+    "    arrays = [['A', 'A', 'B', 'B'], ['One', 'Two', 'One', 'Two']]\n",
+    "    index = pd.MultiIndex.from_tuples(list(zip(*arrays)), names=['Letter', 'Number'])\n",
+    "    data = [[1, 2], [3, 4], [5, 6], [7, 8]]\n",
+    "    df = pd.DataFrame(data, index=index, columns=['X', 'Y'])\n",
+    "    print(\"\\nMultiIndex DataFrame:\")\n",
+    "    print(df)\n",
+    "    \n",
+    "    # Stacking\n",
+    "    stacked_df = df.stack()\n",
+    "    print(\"\\nStacked MultiIndex DataFrame:\")\n",
+    "    print(stacked_df)\n",
+    "\n",
+    "def demonstrate_stack_with_groupby():\n",
+    "    # Sample DataFrame with multi-level columns\n",
+    "    multicol = pd.MultiIndex.from_tuples([('weight', 'kg'), ('height', 'm')])\n",
+    "    df = pd.DataFrame([[1.0, 2.0], [3.0, 4.0]],\n",
+    "                      index=['cat', 'dog'],\n",
+    "                      columns=multicol)\n",
+    "    print(\"\\nMulti-Level Column DataFrame:\")\n",
+    "    print(df)\n",
+    "    \n",
+    "    # Stacking the DataFrame\n",
+    "    stacked_df = df.stack()\n",
+    "    print(\"\\nStacked DataFrame:\")\n",
+    "    print(stacked_df)\n",
+    "    \n",
+    "    # Grouping by level 1 (units: kg, m)\n",
+    "    grouped = stacked_df.groupby(level=1).mean()\n",
+    "    print(\"\\nGrouped by Level 1 (Average per unit):\")\n",
+    "    print(grouped)\n",
+    "\n",
+    "def main():\n",
+    "    demonstrate_stack()\n",
+    "    demonstrate_stack_multiindex()\n",
+    "    demonstrate_stack_with_groupby()\n",
+    "main()\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'Year': [2022, 2023, 2024],\n",
+    "    'Sales_A': [100, 120, 140],\n",
+    "    'Sales_B': [80, 90, 100]\n",
+    "})\n",
+    "df\n",
+    "\n",
+    "stacked_df = df.set_index('Year').stack().reset_index()\n",
+    "stacked_df.columns = ['Year', 'Product', 'Sales']\n",
+    "stacked_df\n",
+    "\n",
+    "sns.lineplot(data=stacked_df, x='Year', y='Sales', hue='Product')\n",
+    "plt.show()\n"
    ]
   }
  ],
