transform clean up

--- a/Explorations/Investigating/Transformation/creation.ipynb
+++ b/Explorations/Investigating/Transformation/creation.ipynb
@@ -1130,6 +1130,55 @@
    "source": [
     "df1.join(df2,lsuffix='_l', rsuffix='_r')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can concatenate DFs in the order DFs are provided\n",
+    "df_12 = pd.DataFrame({'A': [1,2,3],\n",
+    "                     'B': [4,5,6]},\n",
+    "                    index=[1,2,3])\n",
+    "df_13 = pd.DataFrame({'A': [7,8,9],\n",
+    "                     'B': [10,11,12]},\n",
+    "                    index=[4,5,6])\n",
+    "pd.concat([df_12, df_13])\n",
+    "\n",
+    "# Merge 2 DFs using their shared key column\n",
+    "df_12 = pd.DataFrame({'A': [1,2,3],\n",
+    "                     'B': [4,5,6],\n",
+    "                     'key': [1,2,3]})\n",
+    "df_13 = pd.DataFrame({'A': [7,8,9],\n",
+    "                     'B': [10,11,12],\n",
+    "                     'key': [1,2,3]})\n",
+    "# inner merges at the intersection of keys\n",
+    "pd.merge(df_12, df_13, how='inner', on='key')\n",
+    "# how='left' or 'right' : Use keys from left or right frame\n",
+    "# how='outer' : Use union of keys\n",
+    "\n",
+    "# You can join DFs with different indexes and instead of using \n",
+    "# keys use a column\n",
+    "df_12 = pd.DataFrame({'A': [1,2,3],\n",
+    "                     'B': [4,5,6]},\n",
+    "                    index=[1,2,3])\n",
+    "df_13 = pd.DataFrame({'C': [7,8,9],\n",
+    "                     'D': [10,11,12]},\n",
+    "                    index=[1,4,5])\n",
+    "df_12.join(df_13, how='outer')\n",
+    "\n",
+    "\n",
+    "#joining dataframes\n",
+    "df = df.append(df2, ignore_index=True, sort=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
