--- a/Explorations/Investigating/Transformation/selection.ipynb
+++ b/Explorations/Investigating/Transformation/selection.ipynb
@@ -292,6 +292,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filtering a dataframe\n",
+    "filt = (df['last'] == 'Schafer') | (df['first'] == 'John')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -336,6 +346,58 @@
     "print(\"\\nSorting by column 'C' in descending order:\")\n",
     "print(df.sort_values(by='C', ascending=False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#spliting a col\n",
+    "df['full_name'].str.split(' ', expand=True)\n",
+    "df[['first', 'last']] = df['full_name'].str.split(' ', expand=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# updating values\n",
+    "\n",
+    "df['Hobbyist'].map({'Yes': True, 'No': False})\n",
+    "\n",
+    "# updating a specific value\n",
+    "df.loc[2, 'last'] = 'Smith'\n",
+    "\n",
+    "# filtering then updating all to the same\n",
+    "filt = (df['email'] == 'JohnDoe@email.com')\n",
+    "df[filt]['last'] = 'Smith'\n",
+    "df.loc[filt, 'last'] = 'Smith'\n",
+    "\n",
+    "# mapping values with a dict:\n",
+    "df['first'] = df['first'].replace({'Corey': 'Chris', 'Jane': 'Mary'})\n",
+    "\n",
+    "# apply function to column\n",
+    "def update_email(email):\n",
+    "    return email.upper()\n",
+    "df['email'].apply(update_email)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
