longlist expo in ipynb

--- a/Explorations/SQLite/Querying/Querying.ipynb
+++ b/Explorations/SQLite/Querying/Querying.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,81 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "First 5 authors:\n",
-      "    id                 name    country  birth\n",
-      "0   1        Adania Shibli  Palestine   1974\n",
-      "1   2        Ahmed Saadawi       Iraq   1973\n",
-      "2   3  Alia Trabucco Zerán      Chile   1983\n",
-      "3   4      Amanda Svensson     Sweden   1987\n",
-      "4   5        Andrey Kurkov    Ukraine   1961\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Query 1: Get the first 5 authors\n",
-    "df = pd.read_sql(\"SELECT * FROM authors LIMIT 5\", conn)\n",
-    "print(\"\\nFirst 5 authors:\\n\", df)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Total Authors:\n",
-      "    total_authors\n",
-      "0             72\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Query 2: Count total authors\n",
-    "df_count = pd.read_sql(\"SELECT COUNT(*) AS total_authors FROM authors\", conn)\n",
-    "print(\"\\nTotal Authors:\\n\", df_count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Authors from Spain 3:\n",
-      "    id                  name country  birth\n",
-      "0  26       Gabriela Ybarra   Spain   1983\n",
-      "1  23          Eva Baltasar   Spain   1978\n",
-      "2  35         Javier Cercas   Spain   1962\n",
-      "3   8  Antonio Muñoz Molina   Spain   1956\n",
-      "4  21    Enrique Vila-Matas   Spain   1948\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Query 3: Authors from Season 3\n",
-    "df_season3 = pd.read_sql(\"SELECT * FROM authors WHERE country = 'Spain' ORDER by birth DESC\", conn)\n",
-    "print(\"\\nAuthors from Spain 3:\\n\", df_season3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,71 +91,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor = conn.cursor()"
+    "conn = sqlite3.connect(database_path)\n",
+    "cursor = conn.cursor()\n",
+    "query_path=\"Queries/longlist/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     id                publisher\n",
-      "0    1        And Other Stories\n",
-      "1    2             Charco Press\n",
-      "2    3          Europa Editions\n",
-      "3    4            Faber & Faber\n",
-      "4    5    Fitzcarraldo Editions\n",
-      "5    6             Granta Books\n",
-      "6    7           Harvill Secker\n",
-      "7    8             Honford Star\n",
-      "8    9            Jonathan Cape\n",
-      "9   10  Literatura Random House\n",
-      "10  11           Lolli Editions\n",
-      "11  12          MacLehose Press\n",
-      "12  13                 Oneworld\n",
-      "13  14            Peirene Press\n",
-      "14  15                  Picador\n",
-      "15  16         Portobello Books\n",
-      "16  17            Pushkin Press\n",
-      "17  18                 Riverrun\n",
-      "18  19          Sandstone Press\n",
-      "19  20                Scribe UK\n",
-      "20  21                 Scribner\n",
-      "21  22            Seagull Books\n",
-      "22  23           Serpent's Tail\n",
-      "23  24          Text Publishing\n",
-      "24  25            The New Press\n",
-      "25  26        Tilted Axis Press\n",
-      "26  27            Transit Books\n",
-      "27  28              Tuskar Rock\n",
-      "28  29            Verso Fiction\n",
-      "29  30                      W&N\n",
-      "30  31        William Heinemann\n",
-      "31  32           World Editions\n",
-      "32  33    Yale University Press\n"
+      "---     profession                  name\n",
+      "0   translator    Adrian Nathan West\n",
+      "1   translator     Alison L. Strayer\n",
+      "2   translator          Angela Rodel\n",
+      "3   translator  Aniruddhan Vasudevan\n",
+      "4   translator      Anna Moschovakis\n",
+      "..         ...                   ...\n",
+      "69  translator      Sora Kim-Russell\n",
+      "70  translator        Stephen Snyder\n",
+      "71  translator       Susan Bernofsky\n",
+      "72  translator          Tiffany Tsao\n",
+      "73  translator     Ngũgĩ wa Thiong'o\n",
+      "\n",
+      "[74 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
-    "query_path=\"Queries/\"\n",
-    "query=\"longlist.sql\"\n",
+    "# load from a file\n",
+    "query=\"load_test.sql\"\n",
     "qpath=query_path+query\n",
     "\n",
     "# load query\n",
     "with open(qpath, \"r\") as file:\n",
     "    query=file.read()\n",
-    "    \n",
     "# execute query\n",
     "df = pd.read_sql(query, conn)\n",
-    "print(\"\", df)"
+    "print(\"---\", df)\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### General"
    ]
   },
   {
@@ -238,9 +153,315 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Query 3: Authors from Season 3\n",
-    "df_season3 = pd.read_sql(\"SELECT * FROM authors WHERE country = 'Spain' ORDER by birth DESC\", conn)\n",
-    "print(\"\\nAuthors from Spain 3:\\n\", df_season3)"
+    "# Connect to the database\n",
+    "conn = sqlite3.connect(database_path)\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Query 1: Select all publishers\n",
+    "df_publishers = pd.read_sql(\"SELECT * FROM publishers\", conn)\n",
+    "print(\"\\nPublishers:\\n\", df_publishers)\n",
+    "\n",
+    "# Query 2: Find ID of 'MacLehose Press'\n",
+    "df_publisher_id = pd.read_sql(\"SELECT id FROM publishers WHERE publisher = 'MacLehose Press'\", conn)\n",
+    "print(\"\\nMacLehose Press ID:\\n\", df_publisher_id)\n",
+    "\n",
+    "# Query 3: Find books published by MacLehose Press\n",
+    "df_books = pd.read_sql(\"SELECT title FROM books WHERE publisher_id = 12\", conn)\n",
+    "print(\"\\nBooks by MacLehose Press:\\n\", df_books)\n",
+    "\n",
+    "# Query 4: Find books by nested query\n",
+    "df_books_nested = pd.read_sql(\"\"\"\n",
+    "    SELECT title FROM books WHERE publisher_id = (\n",
+    "        SELECT id FROM publishers WHERE publisher = 'MacLehose Press'\n",
+    "    )\"\"\", conn)\n",
+    "print(\"\\nBooks by MacLehose Press (Nested Query):\\n\", df_books_nested)\n",
+    "\n",
+    "# Query 5: Find ratings for 'In Memory of Memory'\n",
+    "df_ratings = pd.read_sql(\"\"\"\n",
+    "    SELECT rating FROM ratings WHERE book_id = (\n",
+    "        SELECT id FROM books WHERE title = 'In Memory of Memory'\n",
+    "    )\"\"\", conn)\n",
+    "print(\"\\nRatings for 'In Memory of Memory':\\n\", df_ratings)\n",
+    "\n",
+    "# Query 6: Find the average rating for 'In Memory of Memory'\n",
+    "df_avg_rating = pd.read_sql(\"\"\"\n",
+    "    SELECT AVG(rating) FROM ratings WHERE book_id = (\n",
+    "        SELECT id FROM books WHERE title = 'In Memory of Memory'\n",
+    "    )\"\"\", conn)\n",
+    "print(\"\\nAverage Rating for 'In Memory of Memory':\\n\", df_avg_rating)\n",
+    "\n",
+    "# Query 7: Find author of 'Flights'\n",
+    "df_author = pd.read_sql(\"\"\"\n",
+    "    SELECT name FROM authors WHERE id = (\n",
+    "        SELECT author_id FROM authored WHERE book_id = (\n",
+    "            SELECT id FROM books WHERE title = 'Flights'\n",
+    "        )\n",
+    "    )\"\"\", conn)\n",
+    "print(\"\\nAuthor of 'Flights':\\n\", df_author)\n",
+    "\n",
+    "# Query 8: Find books by 'Fernanda Melchor'\n",
+    "df_books_melchor = pd.read_sql(\"\"\"\n",
+    "    SELECT title FROM books WHERE id IN (\n",
+    "        SELECT book_id FROM authored WHERE author_id = (\n",
+    "            SELECT id FROM authors WHERE name = 'Fernanda Melchor'\n",
+    "        )\n",
+    "    )\"\"\", conn)\n",
+    "print(\"\\nBooks by Fernanda Melchor:\\n\", df_books_melchor)\n",
+    "\n",
+    "# Query 9: Find books with 'love' in the title\n",
+    "df_love_books = pd.read_sql(\"SELECT title FROM books WHERE title LIKE '%love%'\", conn)\n",
+    "print(\"\\nBooks with 'love' in title:\\n\", df_love_books)\n",
+    "\n",
+    "# Query 10: Find books starting with 'The'\n",
+    "df_the_books = pd.read_sql(\"SELECT title FROM books WHERE title LIKE 'The %'\", conn)\n",
+    "print(\"\\nBooks starting with 'The':\\n\", df_the_books)\n",
+    "\n",
+    "# Query 11: Find books matching uncertain title spelling\n",
+    "df_uncertain_book = pd.read_sql(\"SELECT title FROM books WHERE title LIKE 'P_re'\", conn)\n",
+    "print(\"\\nBooks matching uncertain spelling:\\n\", df_uncertain_book)\n",
+    "\n",
+    "# Query 12: Find average rating of all books\n",
+    "df_avg_all = pd.read_sql(\"SELECT ROUND(AVG(rating), 2) AS 'Average Rating' FROM ratings\", conn)\n",
+    "print(\"\\nAverage rating of all books:\\n\", df_avg_all)\n",
+    "\n",
+    "# Query 13: Find maximum and minimum rating\n",
+    "df_max_rating = pd.read_sql(\"SELECT MAX(rating) FROM ratings\", conn)\n",
+    "df_min_rating = pd.read_sql(\"SELECT MIN(rating) FROM ratings\", conn)\n",
+    "print(\"\\nMaximum rating:\\n\", df_max_rating)\n",
+    "print(\"\\nMinimum rating:\\n\", df_min_rating)\n",
+    "\n",
+    "# Query 14: Count total votes (pages)\n",
+    "df_total_pages = pd.read_sql(\"SELECT SUM(pages) FROM books\", conn)\n",
+    "print(\"\\nTotal number of pages:\\n\", df_total_pages)\n",
+    "\n",
+    "# Query 15: Count total books and translators\n",
+    "df_total_books = pd.read_sql(\"SELECT COUNT(*) FROM books\", conn)\n",
+    "df_total_translators = pd.read_sql(\"SELECT COUNT(name) FROM translators\", conn)\n",
+    "print(\"\\nTotal number of books:\\n\", df_total_books)\n",
+    "print(\"\\nTotal number of translators:\\n\", df_total_translators)\n",
+    "\n",
+    "# Query 16: Count unique publishers\n",
+    "df_unique_publishers = pd.read_sql(\"SELECT COUNT(DISTINCT publisher) FROM publishers\", conn)\n",
+    "print(\"\\nTotal unique publishers:\\n\", df_unique_publishers)\n",
+    "\n",
+    "# Close connection\n",
+    "conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connect to the database\n",
+    "conn = sqlite3.connect(database_path)\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Query 1: UNION - Combines authors and translators into one result set\n",
+    "df_union = pd.read_sql(\"\"\"\n",
+    "    SELECT 'author' AS profession, name FROM authors\n",
+    "    UNION\n",
+    "    SELECT 'translator' AS profession, name FROM translators;\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nAuthors and Translators:\\n\", df_union)\n",
+    "\n",
+    "# Query 2: INTERSECT - Finds authors who are also translators\n",
+    "df_intersect = pd.read_sql(\"\"\"\n",
+    "    SELECT name FROM authors\n",
+    "    INTERSECT\n",
+    "    SELECT name FROM translators;\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nAuthors who are also Translators:\\n\", df_intersect)\n",
+    "\n",
+    "# Query 3: Finds books translated by Sophie Hughes\n",
+    "df_sophie_books = pd.read_sql(\"\"\"\n",
+    "    SELECT book_id FROM translated WHERE translator_id = (\n",
+    "        SELECT id FROM translators WHERE name = 'Sophie Hughes'\n",
+    "    );\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nBooks translated by Sophie Hughes:\\n\", df_sophie_books)\n",
+    "\n",
+    "# Query 4: Finds books translated by Margaret Jull Costa\n",
+    "df_margaret_books = pd.read_sql(\"\"\"\n",
+    "    SELECT book_id FROM translated WHERE translator_id = (\n",
+    "        SELECT id FROM translators WHERE name = 'Margaret Jull Costa'\n",
+    "    );\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nBooks translated by Margaret Jull Costa:\\n\", df_margaret_books)\n",
+    "\n",
+    "# Query 5: INTERSECT - Finds books translated by both Sophie Hughes and Margaret Jull Costa\n",
+    "df_common_books = pd.read_sql(\"\"\"\n",
+    "    SELECT book_id FROM translated WHERE translator_id = (\n",
+    "        SELECT id FROM translators WHERE name = 'Sophie Hughes'\n",
+    "    )\n",
+    "    INTERSECT\n",
+    "    SELECT book_id FROM translated WHERE translator_id = (\n",
+    "        SELECT id FROM translators WHERE name = 'Margaret Jull Costa'\n",
+    "    );\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nBooks translated by both Sophie Hughes and Margaret Jull Costa:\\n\", df_common_books)\n",
+    "\n",
+    "# Query 6: Retrieves the titles of books translated by both translators\n",
+    "df_common_titles = pd.read_sql(\"\"\"\n",
+    "    SELECT title FROM books WHERE id IN (\n",
+    "        SELECT book_id FROM translated WHERE translator_id = (\n",
+    "            SELECT id FROM translators WHERE name = 'Sophie Hughes'\n",
+    "        )\n",
+    "        INTERSECT\n",
+    "        SELECT book_id FROM translated WHERE translator_id = (\n",
+    "            SELECT id FROM translators WHERE name = 'Margaret Jull Costa'\n",
+    "        )\n",
+    "    );\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nTitles of books translated by both Sophie Hughes and Margaret Jull Costa:\\n\", df_common_titles)\n",
+    "\n",
+    "# Query 7: EXCEPT - Finds translators who are not authors\n",
+    "df_translators_not_authors = pd.read_sql(\"\"\"\n",
+    "    SELECT name FROM translators\n",
+    "    EXCEPT\n",
+    "    SELECT name FROM authors;\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nTranslators who are not Authors:\\n\", df_translators_not_authors)\n",
+    "\n",
+    "# Close the connection\n",
+    "conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connect to the database\n",
+    "conn = sqlite3.connect(database_path)\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Query 1: Finds average rating for each book\n",
+    "df_avg_ratings = pd.read_sql(\"\"\"\n",
+    "    SELECT book_id, ROUND(AVG(rating), 2) AS \"average rating\" FROM ratings\n",
+    "    GROUP BY book_id;\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nAverage rating for each book:\\n\", df_avg_ratings)\n",
+    "\n",
+    "# Query 2: Joins titles with average ratings\n",
+    "df_avg_ratings_with_titles = pd.read_sql(\"\"\"\n",
+    "    SELECT title, ROUND(AVG(rating), 2) AS \"average rating\" FROM ratings\n",
+    "    JOIN books ON books.id = ratings.book_id\n",
+    "    GROUP BY book_id;\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nAverage rating per book title:\\n\", df_avg_ratings_with_titles)\n",
+    "\n",
+    "# Query 3: Chooses books with a rating of 4.0 or higher\n",
+    "df_high_rated_books = pd.read_sql(\"\"\"\n",
+    "    SELECT title, ROUND(AVG(rating), 2) AS \"average rating\" FROM ratings\n",
+    "    JOIN books ON books.id = ratings.book_id\n",
+    "    GROUP BY book_id\n",
+    "    HAVING \"average rating\" > 4.0;\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nBooks with an average rating above 4.0:\\n\", df_high_rated_books)\n",
+    "\n",
+    "# Query 4: Chooses books with a rating of 4.0 or higher, ordered by rating\n",
+    "df_high_rated_books_ordered = pd.read_sql(\"\"\"\n",
+    "    SELECT book_id, ROUND(AVG(rating), 2) AS \"average rating\" FROM ratings\n",
+    "    GROUP BY book_id\n",
+    "    HAVING \"average rating\" > 4.0\n",
+    "    ORDER BY \"average rating\" DESC;\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nBooks with an average rating above 4.0, ordered by rating:\\n\", df_high_rated_books_ordered)\n",
+    "\n",
+    "# Close the connection\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nested"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connect to the database\n",
+    "conn = sqlite3.connect(database_path)\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Query 1: Finds all books published by MacLehose Press\n",
+    "df_maclehose_books = pd.read_sql(\"\"\"\n",
+    "    SELECT title FROM books WHERE publisher_id = (\n",
+    "        SELECT id FROM publishers WHERE publisher = 'MacLehose Press'\n",
+    "    );\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nBooks published by MacLehose Press:\\n\", df_maclehose_books)\n",
+    "\n",
+    "# Query 2: Finds all ratings for \"In Memory of Memory\"\n",
+    "df_memory_ratings = pd.read_sql(\"\"\"\n",
+    "    SELECT rating FROM ratings WHERE book_id = (\n",
+    "        SELECT id FROM books WHERE title = 'In Memory of Memory'\n",
+    "    );\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nRatings for 'In Memory of Memory':\\n\", df_memory_ratings)\n",
+    "\n",
+    "# Query 3: Finds average rating for \"In Memory of Memory\"\n",
+    "df_memory_avg_rating = pd.read_sql(\"\"\"\n",
+    "    SELECT AVG(rating) FROM ratings WHERE book_id = (\n",
+    "        SELECT id FROM books WHERE title = 'In Memory of Memory'\n",
+    "    );\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nAverage rating for 'In Memory of Memory':\\n\", df_memory_avg_rating)\n",
+    "\n",
+    "# Query 4: Finds author who wrote \"The Birthday Party\"\n",
+    "df_birthday_author = pd.read_sql(\"\"\"\n",
+    "    SELECT name FROM authors WHERE id = (\n",
+    "        SELECT author_id FROM authored WHERE book_id = (\n",
+    "            SELECT id FROM books WHERE title = 'The Birthday Party'\n",
+    "        )\n",
+    "    );\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nAuthor of 'The Birthday Party':\\n\", df_birthday_author)\n",
+    "\n",
+    "# Query 5: Finds all books by Fernanda Melchor\n",
+    "df_melchor_books = pd.read_sql(\"\"\"\n",
+    "    SELECT title FROM books WHERE id IN (\n",
+    "        SELECT book_id FROM authored WHERE author_id = (\n",
+    "            SELECT id FROM authors WHERE name = 'Fernanda Melchor'\n",
+    "        )\n",
+    "    );\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nBooks by Fernanda Melchor:\\n\", df_melchor_books)\n",
+    "\n",
+    "# Query 6: Finds books by multiple authors (Fernanda Melchor, Annie Ernaux)\n",
+    "df_multiple_authors_books = pd.read_sql(\"\"\"\n",
+    "    SELECT title FROM books WHERE id IN (\n",
+    "        SELECT book_id FROM authored WHERE author_id IN (\n",
+    "            SELECT id FROM authors WHERE name IN ('Fernanda Melchor', 'Annie Ernaux')\n",
+    "        )\n",
+    "    );\n",
+    "\"\"\", conn)\n",
+    "print(\"\\nBooks by Fernanda Melchor or Annie Ernaux:\\n\", df_multiple_authors_books)\n",
+    "\n",
+    "# Close the connection\n",
+    "conn.close()\n"
    ]
   }
  ],
