loading from excel

--- a/Explorations/SQLite/Writing/Creating.ipynb
+++ b/Explorations/SQLite/Writing/Creating.ipynb
@@ -23,7 +23,6 @@
     }
    ],
    "source": [
-    "\n",
     "import sqlite3\n",
     "import pandas as pd\n",
     "\n",
@@ -49,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You are creating a SQLite database from CSV files using Python. The process involves:  \n",
+    "Creating a SQLite database from CSV files using Python. The process involves:  \n",
     "\n",
     "1. **Defining the Schema** – Deleting existing tables (if they exist) and creating new ones with appropriate constraints.  \n",
     "2. **Loading CSV Data** – Reading data from CSV files into Pandas DataFrames.  \n",
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,36 +201,97 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# test that "
+    "Load data from an spreadsheet to a database."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database created and saved successfully at Examples/art_museum_excel.db.\n"
+     ]
+    }
+   ],
    "source": [
-    "# database_path=\"../Datasets/database/mfa.db\""
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# Define file paths\n",
+    "EXCEL_FILE = \"../Datasets/excel/mfa.xlsx\"\n",
+    "DB_PATH = \"Examples/art_museum_excel.db\"\n",
+    "\n",
+    "# Connect to SQLite database\n",
+    "conn = sqlite3.connect(DB_PATH)\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "try:\n",
+    "    # Step 1: Delete existing tables if they exist\n",
+    "    cursor.executescript(\"\"\"\n",
+    "        DROP TABLE IF EXISTS collections;\n",
+    "        DROP TABLE IF EXISTS artists;\n",
+    "        DROP TABLE IF EXISTS created;\n",
+    "    \"\"\")\n",
+    "    \n",
+    "    # Step 2: Create tables\n",
+    "    cursor.executescript(\"\"\"\n",
+    "        CREATE TABLE collections (\n",
+    "            id INTEGER PRIMARY KEY,\n",
+    "            title TEXT NOT NULL,\n",
+    "            accession_number TEXT NOT NULL UNIQUE,\n",
+    "            acquired NUMERIC\n",
+    "        );\n",
+    "        \n",
+    "        CREATE TABLE artists (\n",
+    "            id INTEGER PRIMARY KEY,\n",
+    "            name TEXT NOT NULL\n",
+    "        );\n",
+    "        \n",
+    "        CREATE TABLE created (\n",
+    "            artist_id INTEGER,\n",
+    "            collection_id INTEGER,\n",
+    "            PRIMARY KEY (artist_id, collection_id),\n",
+    "            FOREIGN KEY (artist_id) REFERENCES artists(id),\n",
+    "            FOREIGN KEY (collection_id) REFERENCES collections(id)\n",
+    "        );\n",
+    "    \"\"\")\n",
+    "    \n",
+    "    conn.commit()\n",
+    "\n",
+    "    # Step 3: Load Excel sheets into DataFrames\n",
+    "    df_dict = pd.read_excel(EXCEL_FILE, sheet_name=None)  # Load all sheets\n",
+    "\n",
+    "    # Extract DataFrames\n",
+    "    artists_df = df_dict.get(\"artists\", pd.DataFrame())  # Ensure it exists\n",
+    "    collections_df = df_dict.get(\"collections\", pd.DataFrame())\n",
+    "    created_df = df_dict.get(\"created\", pd.DataFrame())\n",
+    "\n",
+    "    # Step 4: Import data into SQLite\n",
+    "    if not artists_df.empty:\n",
+    "        artists_df.to_sql(\"artists\", conn, if_exists='append', index=False)\n",
+    "    if not collections_df.empty:\n",
+    "        collections_df.to_sql(\"collections\", conn, if_exists='append', index=False)\n",
+    "    if not created_df.empty:\n",
+    "        created_df.to_sql(\"created\", conn, if_exists='append', index=False)\n",
+    "\n",
+    "    conn.commit()\n",
+    "    print(f\"Database created and saved successfully at {DB_PATH}.\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "    conn.rollback()\n",
+    "\n",
+    "finally:\n",
+    "    conn.close()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
