--- a/Explorations/SQLite/Writing/Creating.ipynb
+++ b/Explorations/SQLite/Writing/Creating.ipynb
@@ -298,7 +298,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# put schema in a text file"
+   ]
   }
  ],
  "metadata": {
